--- a/PhenoPad/PageOverview.xaml
+++ b/PhenoPad/PageOverview.xaml
@@ -118,12 +118,12 @@
                            FontSize="15" RelativePanel.AlignBottomWithPanel="True" Grid.Column="1"/>
 
                             </RelativePanel>
-                                <!--<Button Style="{StaticResource MyButtonStyle}" x:Name="ViewButton" Tag="{x:Bind id}"  
+                                <Button Style="{StaticResource MyButtonStyle}" x:Name="ViewButton" Tag="{x:Bind id}"  
                                     Background="Transparent" Grid.Column="2" 
                                         Click="ViewButton_Click"
                                     HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                                     <TextBlock Foreground="{StaticResource WORD_DARK}">View</TextBlock>
-                                </Button>-->
+                                </Button>
 
 
                                 <Button Style="{StaticResource MyButtonStyle}" x:Name="OpenButton" Tag="{x:Bind id}"  
