--- a/PhenoPad/CustomControl/NoteLineViewControl.xaml
+++ b/PhenoPad/CustomControl/NoteLineViewControl.xaml
@@ -9,25 +9,68 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid>
+    <UserControl.Resources>
+        <Flyout x:Name="ChatRecordFlyout" Placement="Left" >
+            <Grid>
+                <!--TODO:-->
+            </Grid>
+        </Flyout>
+
+
+
+    </UserControl.Resources>
+    
+    <Grid x:Name="rootGrid" Background="WhiteSmoke">
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <!--Key date / line #-->
         <Grid Grid.Column="0">
-            
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock x:Name="KeyTime" Grid.Row="0" FontSize="22" />
+            <TextBlock x:Name="KeyLine"  Visibility="Collapsed" FontSize="24" />
+
         </Grid>
-        <!--stroke/HWR/ADDIN-->
-        <Grid Grid.Column="1"/>
+        <!--stroke/HWR/ADDIN/CHAT-->
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+
+            <Grid BorderThickness="2" CornerRadius="5" BorderBrush="Black">
+                <InkCanvas x:Name="strokeCanvas" x:FieldModifier="public"  />
+            </Grid>
+            <!--CHAT GRID-->
+            <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Visibility="Collapsed" >
+                <Button x:Name="ChatButton" Style="{StaticResource ButtonStyle1}" 
+                    Background="WhiteSmoke"               
+                    Width="50" Height="50"
+                    ToolTipService.ToolTip="Show Chat Dialogue"
+                    HorizontalAlignment="Center" VerticalAlignment="Center" >
+                    <SymbolIcon Symbol="Message"/>
+                </Button>
+            </Grid>
+
+
+        </Grid>
         <!--Phenotypes-->
         <Grid Grid.Column="2"/>
         <!--chat button-->
-        <Grid Grid.Column="3"/>
-        
+
 
     </Grid>
 </UserControl>
