--- a/PhenoPad/CustomControl/NoteLineViewControl.xaml
+++ b/PhenoPad/CustomControl/NoteLineViewControl.xaml
@@ -5,27 +5,94 @@
     xmlns:local="using:PhenoPad.CustomControl"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:phenotypeservice="using:PhenoPad.PhenotypeService"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:local1="using:PhenoPad"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
 
     <UserControl.Resources>
+        <local1:BackgroundColorConverter x:Key="bcConverter" />
+        <local1:IntervalDisplayConverter x:Key="intervalConverter" />
+
         <Flyout x:Name="ChatRecordFlyout" Placement="Left" >
             <Grid>
-                <!--TODO:-->
+                <local1:ChatListView x:Name="chatView" Grid.Row="0" Grid.Column="0"
+                            IncrementalLoadingThreshold="2" Margin="10" 
+                            BorderBrush="White" BorderThickness="2"
+                            ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <ItemsStackPanel ItemsUpdatingScrollMode="KeepLastItemInView"  VerticalAlignment="Bottom"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Padding" Value="0"/>
+                            <Setter Property="Margin" Value="0"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+
+                    <ListView.ItemContainerTransitions>
+                        <TransitionCollection/>
+                    </ListView.ItemContainerTransitions>
+
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="local1:TextMessage">
+                            <Grid Margin="6">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <!--Finalized message color-->
+                                <Grid Grid.Row="0" Grid.Column="{Binding TextColumn}"
+                                        MinWidth="300" MaxWidth="600" Visibility="{x:Bind Path=IsFinal}"
+                                        Background="{Binding Converter={StaticResource bcConverter}}"/>
+
+                                <!--Not finalized message color-->
+                                <Grid Grid.Row="0" Grid.Column="{Binding TextColumn}"
+                                        Background="{StaticResource Background_Temp}"
+                                        Visibility="{x:Bind Path=IsNotFinal}"/>
+                                <Grid Grid.Row="0" Grid.Column="{Binding TextColumn}">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+
+                                    <TextBlock Grid.Row="0"  Grid.Column="0"
+                                        Text="{x:Bind Body}" TextWrapping="Wrap"
+                                        MinWidth="300" MaxWidth="500"
+                                        FontSize="18" Padding="10" VerticalAlignment="Center"
+                                        Foreground="Black"/>
+
+                                    <Button Grid.Row="1" Background="Transparent" HorizontalAlignment="Stretch">
+                                        <TextBlock FontSize="14" TextWrapping="Wrap" Padding="3"
+                                            Text="{Binding Converter={StaticResource intervalConverter}}"                                
+                                            HorizontalAlignment="Left"
+                                            Foreground="Black"/>
+                                    </Button>
+                                </Grid>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </local1:ChatListView>
             </Grid>
         </Flyout>
-
-
-
     </UserControl.Resources>
     
-    <Grid x:Name="rootGrid" Background="WhiteSmoke">
+    <Grid x:Name="rootGrid" Background="Transparent">
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
         <!--Key date / line #-->
         <Grid Grid.Column="0">
@@ -39,8 +106,9 @@
             <TextBlock x:Name="KeyLine"  Visibility="Collapsed" FontSize="24" />
 
         </Grid>
+        
         <!--stroke/HWR/ADDIN/CHAT-->
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
@@ -51,9 +119,12 @@
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
 
-            <Grid BorderThickness="2" CornerRadius="5" BorderBrush="Black">
+            <Grid BorderThickness="2" CornerRadius="5" BorderBrush="Black" Padding="10">
                 <InkCanvas x:Name="strokeCanvas" x:FieldModifier="public"  />
             </Grid>
+            <StackPanel x:Name="recogPhraseStack" Grid.Column="0" Grid.Row="1"
+                        Orientation="Horizontal" Spacing="5" />
+            <Grid x:Name="addinGrid" />
             <!--CHAT GRID-->
             <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Visibility="Collapsed" >
                 <Button x:Name="ChatButton" Style="{StaticResource ButtonStyle1}" 
@@ -67,8 +138,53 @@
 
 
         </Grid>
+        
         <!--Phenotypes-->
-        <Grid Grid.Column="2"/>
+        <Grid Grid.Column="1">
+            <ListView 
+                ScrollViewer.HorizontalScrollMode="Enabled"
+                ScrollViewer.VerticalScrollMode="Disabled"
+                ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                ScrollViewer.IsHorizontalRailEnabled="True"   
+                            x:Name="PhenoListView">
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <controls:WrapPanel x:Name="wrappanel"
+                                                            FlowDirection="LeftToRight" 
+                                                            MaxHeight="150"
+                                                            Width="300"
+                                                            Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="phenotypeservice:Phenotype">
+
+                        <local:PhenotypeBriefControl 
+                                        VerticalAlignment="Center" phenotypeName="{x:Bind name}" 
+                                                                    phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" 
+                                                                    sourceType="{x:Bind sourceType}" presentPosition="List" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <!--Defining the phenotype candidate tile style-->
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="Padding" Value="0 0 0 0" />
+                        <Setter Property="Margin" Value="0 0 0 0" />
+                        <!--<Setter Property="Height" Value="40"/>-->
+                        <Setter Property="HorizontalContentAlignment" Value="Left" />
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <ContentPresenter/>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
+        </Grid>
+        
         <!--chat button-->
 
 
