--- a/PhenoPad/NoteViewPage.xaml
+++ b/PhenoPad/NoteViewPage.xaml
@@ -65,7 +65,9 @@
         </StackPanel>
         
         <!--OVERVIEW CONTENT PANEL-->
-        <StackPanel Orientation="Vertical" x:Name="NoteLineStack" Grid.Row="1" Grid.Column="1"/>
+        <StackPanel Orientation="Vertical" x:Name="NoteLineStack" 
+                    Grid.Row="1" Grid.Column="1" Spacing="10" Padding="10"
+                    Background="Transparent"/>
         <!--TODO: DATA TEMPLATE CUSTOM CONTROL-->
 
 
