--- a/PhenoPad/CustomControl/NoteLineViewControl.xaml
+++ b/PhenoPad/CustomControl/NoteLineViewControl.xaml
@@ -18,7 +18,7 @@
 
         <Flyout x:Name="ChatRecordFlyout" Placement="Left" >
             <Grid>
-                <local1:ChatListView x:Name="chatView" Grid.Row="0" Grid.Column="0"
+                <local1:ChatListView x:Name="chatView"
                             IncrementalLoadingThreshold="2" Margin="10" 
                             BorderBrush="White" BorderThickness="2"
                             ScrollViewer.VerticalScrollBarVisibility="Hidden">
@@ -87,11 +87,12 @@
         </Flyout>
     </UserControl.Resources>
     
-    <Grid x:Name="rootGrid" Background="Transparent">
+    <Grid x:Name="rootGrid" Margin="0 10 0 10" Background="Transparent">
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
         <!--Key date / line #-->
@@ -102,13 +103,13 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
-            <TextBlock x:Name="KeyTime" Grid.Row="0" FontSize="22" />
+            <TextBlock x:Name="KeyTime" Grid.Row="0" FontSize="18" />
             <TextBlock x:Name="KeyLine"  Visibility="Collapsed" FontSize="24" />
 
         </Grid>
         
         <!--stroke/HWR/ADDIN/CHAT-->
-        <Grid Grid.Column="2">
+        <Grid Grid.Column="2"  HorizontalAlignment="Left">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
@@ -119,26 +120,89 @@
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
 
-            <Grid BorderThickness="2" CornerRadius="5" BorderBrush="Black" Padding="10">
+            <Grid x:Name="strokeGrid" x:FieldModifier="public" BorderThickness="2" CornerRadius="5" BorderBrush="Black" Padding="10">
                 <InkCanvas x:Name="strokeCanvas" x:FieldModifier="public"  />
             </Grid>
-            <StackPanel x:Name="recogPhraseStack" Grid.Column="0" Grid.Row="1"
-                        Orientation="Horizontal" Spacing="5" />
-            <Grid x:Name="addinGrid" />
-            <!--CHAT GRID-->
-            <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Visibility="Collapsed" >
-                <Button x:Name="ChatButton" Style="{StaticResource ButtonStyle1}" 
-                    Background="WhiteSmoke"               
-                    Width="50" Height="50"
-                    ToolTipService.ToolTip="Show Chat Dialogue"
-                    HorizontalAlignment="Center" VerticalAlignment="Center" >
-                    <SymbolIcon Symbol="Message"/>
-                </Button>
+            <Grid x:Name="addinGrid" x:FieldModifier="public" Background="Yellow" BorderThickness="2" CornerRadius="5" BorderBrush="Black" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2"
+                   Width="300" Visibility="Collapsed">
+                <Viewbox Name="AddInIcon" Stretch="Fill" CanDrag="False"/>
             </Grid>
 
-
+            <StackPanel x:Name="recogPhraseStack" Grid.Column="0" Grid.Row="1"
+                        Orientation="Horizontal" Spacing="5" />
         </Grid>
-        
+
+        <Grid x:Name="chatGrid" x:FieldModifier="public" Grid.Column="3" VerticalAlignment="Top" Background="Azure" Visibility="Collapsed" 
+              BorderThickness="2" CornerRadius="5" BorderBrush="Black" Padding="10">
+                <local1:ChatListView x:Name="chatItem"
+                                     
+                            IncrementalLoadingThreshold="2" Margin="10" 
+                            BorderBrush="White" BorderThickness="2"
+                            ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <ItemsStackPanel ItemsUpdatingScrollMode="KeepItemsInView"  VerticalAlignment="Top"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Padding" Value="0"/>
+                            <Setter Property="Margin" Value="0"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+
+                    <ListView.ItemContainerTransitions>
+                        <TransitionCollection/>
+                    </ListView.ItemContainerTransitions>
+
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="local1:TextMessage">
+                            <Grid Margin="6">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+
+                                <!--Finalized message color-->
+                                <Grid Grid.Row="0" Grid.Column="{Binding TextColumn}"
+                                        MinWidth="300" MaxWidth="600" Visibility="{x:Bind Path=IsFinal}"
+                                        Background="{Binding Converter={StaticResource bcConverter}}"/>
+
+                                <!--Not finalized message color-->
+                                <Grid Grid.Row="0" Grid.Column="{Binding TextColumn}"
+                                        Background="{StaticResource Background_Temp}"
+                                        Visibility="{x:Bind Path=IsNotFinal}"/>
+                                <Grid Grid.Row="0" Grid.Column="{Binding TextColumn}">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+
+                                    <TextBlock Grid.Row="0"  Grid.Column="0"
+                                        Text="{x:Bind Body}" TextWrapping="Wrap"
+                                        MinWidth="300" MaxWidth="500"
+                                        FontSize="18" Padding="10" VerticalAlignment="Center"
+                                        Foreground="Black"/>
+
+                                    <Button Grid.Row="1" Background="Transparent" HorizontalAlignment="Stretch">
+                                        <TextBlock FontSize="14" TextWrapping="Wrap" Padding="3"
+                                            Text="{Binding Converter={StaticResource intervalConverter}}"                                
+                                            HorizontalAlignment="Left"
+                                            Foreground="Black"/>
+                                    </Button>
+                                </Grid>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </local1:ChatListView>
+        </Grid>
+
+
         <!--Phenotypes-->
         <Grid Grid.Column="1">
             <ListView 
