--- a/PhenoPad/NoteViewPage.xaml
+++ b/PhenoPad/NoteViewPage.xaml
@@ -9,8 +9,10 @@
     xmlns:phenotypeservice="using:PhenoPad.PhenotypeService"
     xmlns:customcontrol="using:PhenoPad.CustomControl"
     mc:Ignorable="d">
+    <Page.Resources>
+    </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid x:Name="root" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
@@ -65,80 +67,15 @@
         </StackPanel>
         
         <!--OVERVIEW CONTENT PANEL-->
-        <StackPanel Orientation="Vertical" x:Name="NoteLineStack" 
-                    Grid.Row="1" Grid.Column="1" Spacing="10" Padding="10"
-                    Background="Transparent"/>
-        <!--TODO: DATA TEMPLATE CUSTOM CONTROL-->
+        <ScrollViewer Visibility="Collapsed" ZoomMode="Disabled" VerticalScrollMode="Enabled" Grid.Row="1" Grid.Column="1">
+            <controls:WrapPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" x:Name="NoteLineStack" 
+                    Padding="10"
+                Background="Yellow"/>
+        </ScrollViewer>
+        <ListView IsItemClickEnabled="False" Padding="10" Grid.Row="1" Grid.Column="1" x:Name="aaa">
+            
 
-
-
-
-        <!--Timeline/category bar--><!--
-        <Grid Grid.Column="0" Grid.Row="1" >
-            <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="TimeListView" Padding="3 0" 
-                      >
-                <ListView.Header>
-                    <controls:ScrollHeader Mode="Sticky" TargetListViewBase="{x:Bind PhenoListView}">
-                        <StackPanel Background="White">
-                            <TextBlock  Foreground="{StaticResource WORD_DARKER}" Text="Timeline" FontSize="16" 
-                                        FontWeight="SemiBold" Padding="5"/>
-                        </StackPanel>
-                    </controls:ScrollHeader>
-                </ListView.Header>
-
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="phenotypeservice:Phenotype">
-                        <TextBlock Text="{x:Bind time}"/>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="ListViewItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                        <Setter Property="Margin" Value="0,0,0,0" />
-                        <Setter Property="Padding" Value="5,0,0,0" />
-                        <Setter Property="MinHeight" Value="20" />
-                    </Style>
-                </ListView.ItemContainerStyle>
-            </ListView>
-
-
-        </Grid>
-        --><!--Phenotypes section--><!--
-        <Grid Grid.Column="1" Grid.Row="1">
-            <ListView ScrollViewer.VerticalScrollBarVisibility="Hidden" x:Name="PhenoListView" Padding="3 0" 
-                      >
-                <ListView.Header>
-                    <controls:ScrollHeader Mode="Sticky" TargetListViewBase="{x:Bind PhenoListView}">
-                        <StackPanel Background="White">
-                            <TextBlock  Foreground="{StaticResource WORD_DARKER}" Text="Saved phenotypes" FontSize="16" FontWeight="SemiBold" Padding="5"/>
-                        </StackPanel>
-                    </controls:ScrollHeader>
-                </ListView.Header>
-
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="phenotypeservice:Phenotype">
-                        <customcontrol:PhenotypeControl phenotypeName="{x:Bind name}" 
-                                                        phenotypeId="{x:Bind hpId}" 
-                                                        phenotypeState="{x:Bind state}" 
-                                                        sourceType="Saved"/>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="ListViewItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                        <Setter Property="Margin" Value="0,0,0,0" />
-                        <Setter Property="Padding" Value="5,0,0,0" />
-                        <Setter Property="MinHeight" Value="20" />
-                    </Style>
-                </ListView.ItemContainerStyle>
-            </ListView>
-
-        </Grid>
-        --><!--Strokes Section--><!--
-        <Grid Grid.Column="2" Grid.Row="1" Background="LightGray" >
-            <StackPanel x:Name="strokesGrid" Orientation="Vertical" Spacing="10"/>
-
-        </Grid>-->
+        </ListView>
 
     </Grid>
 </Page>
