--- a/PhenoPad/NoteViewPage.xaml
+++ b/PhenoPad/NoteViewPage.xaml
@@ -13,15 +13,10 @@
             <local:BackgroundColorConverter x:Key="bcConverter" />
             <local:IntervalDisplayConverter x:Key="intervalConverter" />
             <Flyout x:Name="ChatRecordFlyout" Placement="Left" >
-                <Grid>
+                <Grid CornerRadius="10" Background="White">
                     <local:ChatListView x:Name="AllChatView"
                             IncrementalLoadingThreshold="2" Margin="10" 
                             ScrollViewer.VerticalScrollBarVisibility="Hidden">
-                        <ListView.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <ItemsStackPanel ItemsUpdatingScrollMode="KeepLastItemInView"  VerticalAlignment="Bottom"/>
-                            </ItemsPanelTemplate>
-                        </ListView.ItemsPanel>
 
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
@@ -36,7 +31,7 @@
 
                         <ListView.ItemTemplate>
                             <DataTemplate x:DataType="local:TextMessage">
-                                <Grid Margin="6">
+                                <Grid Margin="6" CornerRadius="10">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
@@ -63,7 +58,7 @@
                                         FontSize="14" Padding="10" VerticalAlignment="Center"
                                         Foreground="Black"/>
 
-                                        <Button Grid.Row="1" Background="Transparent" HorizontalAlignment="Stretch">
+                                        <Button Grid.Row="1" Style="{StaticResource ButtonStyle1}" Background="Transparent" HorizontalAlignment="Stretch">
                                             <TextBlock FontSize="14" TextWrapping="Wrap" Padding="3"
                                             Text="{Binding Converter={StaticResource intervalConverter}}"                                
                                             HorizontalAlignment="Left"
